--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "puma6_fail"
 version = "0.1.0"
-authors = ["Ross Allan <ross@nallar.me>"]
+authors = ["Lun <github@nyx.nova.fail>"]
 
 [dependencies]
 time = "0.1.37"
